# bsptofast64-toolchain

./: .gitignore  README.md  pipeline.json  pyproject.toml  split_collision.py
blender/: blend_export.py  test_fast64.py
cssmap2sm64/: __main__.py  cli.py
cssmap2sm64/stages/: blend_run.py  decompile.py  f64_to_native.py  read_bsp_env.py  sky_cubemap.py  unpack_pak.py
src/bsp2obj/: CMakeLists.txt  bsp_reader.cpp  main.cpp
src/config-gen/: index.js  package-lock.json  package.json
src/vtf2png/: CMakeLists.txt  main.cpp
